-successfully implemented: --correct/incorrect answer detection --mobiel layout still TODO: --work on desktop layout --implement endgame: ----endgame consists of: after 10 questions the game ends and a report is generated of how many incorrect and correct answers were selected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,8 @@ div.currentQuestion {
     background: black;
     color: white;
 }
+
+div.correctAnswers, div.incorrectAnswers {
+    background: black;
+    color: white;
+}
