-implemented restart button upon game finish

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,3 +7,8 @@ div.correctAnswers, div.incorrectAnswers {
     background: black;
     color: white;
 }
+
+div.timer {
+    background: black;
+    color: white;
+}
